# dspy_learn

./: .gitignore  2test2.py  Cheat Sheet.md  Evaluation.py  README.md  dataHandle.ipynb  dataHandle.py  dataLabeler.ipynb  dataLabeler.py  hello.py  intro.md  local.py  log.txt  newDataHandle.py  new_data.csv  note.md  output  pyproject.toml  result.csv  test.ipynb  test.py  test2.ipynb  trainModel.py
docs/: Cheat Sheet.md  intro.md  note.md
dspy_program/: program.pkl
dspy_program_2/: metadata.json  program.pkl
dspy_program_3/: program.pkl
inject_detect_dspy/: __init__.py  metric.py  module.py  signature.py  utils.py
input/: new_data_1_20.csv
