[project]
name = "dspy-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.0rc8",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pysocks>=1.7.1",
    "pytest>=8.3.4",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]
